--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
-body > #root > div {
-  height: 100vh;
-}
 .App {
   display: flex;
   flex-direction: column;
   text-align: center;
+  min-height: 100vh;
 }
